Adiciona aula de revisão

--- a/Aula04-Algoritmos_de_ordenacao.ipynb
+++ b/Aula04-Algoritmos_de_ordenacao.ipynb
@@ -25,12 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.26. (Algoritmo de ordenação: Bubble sort). Bubble sort é um algoritmo muito simples. Ele começa no início da lista e compara os dois primeiros elementos. Se o primeiro for maior do que o segundo, eles são trocados. Esse processo se repete para cada par subsequente, até o final da lista. Depois o algoritmo volta ao início da lista e recomeça o processo, repetindo-o até não haver mais trocas. Implemente uma função que recebe uma lista e retorna seus elementos ordenados usando o algoritmo bubble sort."
+    "**1.26. (Algoritmo de ordenação: Bubble sort).** Bubble sort é um algoritmo muito simples. Ele começa no início da lista e compara os dois primeiros elementos. Se o primeiro for maior do que o segundo, eles são trocados. Esse processo se repete para cada par subsequente, até o final da lista. Depois o algoritmo volta ao início da lista e recomeça o processo, repetindo-o até não haver mais trocas. Implemente uma função que recebe uma lista e retorna seus elementos ordenados usando o algoritmo bubble sort."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -39,19 +39,22 @@
        "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def bubble_sort(lista):\n",
-    "    for i in range(1,len(lista)):\n",
-    "        for j in range(0,len(lista) - i):\n",
-    "            if(lista[j + 1] < lista[j]):\n",
-    "                aux = lista[j + 1]\n",
-    "                lista[j + 1] = lista[j]\n",
-    "                lista[j] = aux\n",
+    "    continua = True\n",
+    "    while continua:\n",
+    "        continua = False\n",
+    "        for i in range(len(lista) - 1):\n",
+    "            if lista[i] > lista[i + 1]:\n",
+    "                aux = lista[i + 1]\n",
+    "                lista[i + 1] = lista[i]\n",
+    "                lista[i] = aux\n",
+    "                continua = True\n",
     "    return lista\n",
     "\n",
     "bubble_sort([1,3,2,-5,-4,-2,5,-3,-1,0,4])"
@@ -61,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.27. (Algoritmo de ordenação: Insertion sort). Algoritmo relativamente eficiente para listas pequenas e comumente usado como parte de algoritmos mais sofisticados. Ele funciona da seguinte maneira: a cada iteração, o algoritmo remove um elemento da lista, encontra seu lugar na lista ordenada e insere o elemento. Assim, a parte ordenada da lista cresce a cada iteração. A ordenação é feita na própria lista. A cada posição da lista, o algoritmo compara seu valor com o maior valor da parte ordenada. Se for maior, o elemento é mntido e o algoritmo passa para a próxima posição. Se for menor, ele acha a posição correta do elemento na parte ordenada e move todos os valores maiores para abrir espaço e inserir o elemento. Implemente uma função que recebe uma lista e retorna seus elementos ordenados usando o algoritmo insertion sort."
+    "**1.27. (Algoritmo de ordenação: Insertion sort).** Algoritmo relativamente eficiente para listas pequenas e comumente usado como parte de algoritmos mais sofisticados. Ele funciona da seguinte maneira: a cada iteração, o algoritmo remove um elemento da lista, encontra seu lugar na lista ordenada e insere o elemento. Assim, a parte ordenada da lista cresce a cada iteração. A ordenação é feita na própria lista. A cada posição da lista, o algoritmo compara seu valor com o maior valor da parte ordenada. Se for maior, o elemento é mantido e o algoritmo passa para a próxima posição. Se for menor, ele acha a posição correta do elemento na parte ordenada e move todos os valores maiores para abrir espaço e inserir o elemento. Implemente uma função que recebe uma lista e retorna seus elementos ordenados usando o algoritmo insertion sort."
    ]
   },
   {
@@ -98,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.27 e meio (Selection sort)"
+    "**1.28 (Selection sort)** O selection sort divide o array de entrada em duas partes: a parte ordenada, que ocupa a extremidade esquerda do array, e a parte não-ordenada, que ocupa a parte direita do array. O algoritmo busca o menor elemento da parte não-ordenada e o troca com o elemento mais à esquerda da parte não-ordenada, movendo a fronteira entre as duas partes do array uma posição para a direita. O selection sort é quadrático em todos os casos. Implemente uma função que recebe uma lista e retorna seus elementos ordenados usando o algoritmo selection sort."
    ]
   },
   {
