--- a/Aula11-Arrays_cont.ipynb
+++ b/Aula11-Arrays_cont.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Algumas operações, como as de atribuição aritmética \"+=\" e \"*=\", modificam o *array* diretamente, ao invés de criar outro com o resultado."
+    "Algumas operações, como as de atribuição aritmética \"+=\" e \"\\*=\", modificam o *array* diretamente, ao invés de criar outro com o resultado."
    ]
   },
   {
