--- a/Prova01.ipynb
+++ b/Prova01.ipynb
@@ -31,11 +31,11 @@
    "source": [
     "def multiv_normal_matrix(n, means, covs):\n",
     "    # A primeira matriz\n",
-    "    X = np.random.multivariate_normal(means, covs, size = n[0])\n",
+    "    X = np.random.multivariate_normal(means[0], covs[0], size = n[0])\n",
     "    # Caso C > 1, gerar mais matrizes e concatená-las\n",
     "    # sucessivamente com a primeira:\n",
-    "    for i in n[1:]:\n",
-    "        X_c = np.random.multivariate_normal(means, covs, size = i)\n",
+    "    for i in range(1,len(n)):\n",
+    "        X_c = np.random.multivariate_normal(means[i], covs[i], size = n[i])\n",
     "        X = np.vstack((X, X_c))\n",
     "    return X"
    ]
@@ -56,15 +56,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4.74178709 -0.15897542 -7.10934132]\n",
-      " [ 0.46680271  0.1283556  -5.18780722]\n",
-      " [-1.2276006  -1.42988669 -1.30945266]\n",
-      " [ 6.30925635 -0.11190506 -5.33816265]\n",
-      " [ 1.29281165 -0.31730128 -5.0752457 ]\n",
-      " [ 7.43124778  0.14895415 -4.478886  ]\n",
-      " [ 5.96639308  0.82861773 -3.76975489]\n",
-      " [-0.71754761 -0.8493205  -2.49964522]\n",
-      " [11.48886987  0.74165276 -1.75182154]]\n"
+      "[[  0.18544677   3.44532934   9.8875874 ]\n",
+      " [ -0.88329932   4.40609639  10.09076111]\n",
+      " [ -1.30690015   6.34527367   8.98891742]\n",
+      " [ -3.26805774  -0.11190506   3.99637801]\n",
+      " [ -7.03039126  -0.31730128   4.19356572]\n",
+      " [ -2.42656416   0.14895415   4.6408355 ]\n",
+      " [ -3.52520519   0.82861773   5.17268383]\n",
+      " [  9.39943971  -3.87473391 -10.83395248]\n",
+      " [ 10.52442769  -3.31386615  -8.67614233]]\n"
      ]
     }
    ],
@@ -74,10 +74,12 @@
     "np.random.seed(7122019)\n",
     "\n",
     "# Quantidade nc de linhas das matrizes, médias das v.a.s\n",
-    "# normais e matriz de covariância:\n",
+    "# normais e matrizes de covariância:\n",
     "nc = [3,4,2]\n",
-    "means = [4, 0, -4]\n",
-    "covs = np.array([[16, 0, 0], [0, 1, 0], [0, 0, 16]])\n",
+    "means = [[0, 5, 10], [-5, 0, 5], [10, -5, -10]]\n",
+    "covs = np.array([[[1, 0, 0], [0, 4, 0], [0, 0, 0.5]],\n",
+    "                [[9,0,0], [0, 1, 0], [0, 0, 9]],\n",
+    "                [[0.5, 0, 0], [0, 9, 0], [0, 0, 0.5]]])\n",
     "\n",
     "X = multiv_normal_matrix(nc, means, covs)\n",
     "print(X)"
